@@ -17,12 +17,15 @@ This is the third beta release of DDD 3.1, fixing some minor bugs:
 - Perl source position was not recognized in a number of cases.
 - Creating large plots could freeze DDD under certain circumstances.
 - The builtin plot is much faster.
+- The `configure' option `--without-xpm' had no effect.
 
 
 There are also some minor new features:
 
 - The maximum size of the undo buffer can be configured at run-time.
-
+- Turning the `setRemoteDisplay' resource off disables DISPLAY being
+  set over remote channels.  This is useful with remote shells that
+  set DISPLAY on their own, such as `ssh'.
 
 See the DDD ChangeLog for more details.
 
